--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello Movie"
+        android:text="El Forge"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:textSize="35dp"
