--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/searchParam"
-        android:hint="Search Movie"
+        android:hint="Search Games"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
