--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -5,4 +5,11 @@
     android:layout_height="match_parent"
     tools:context="com.epicodus.andrewrusso.elforge.ui.SearchResultsActivity">
 
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/listView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
