--- a/app/src/main/res/layout/game_list_item.xml
+++ b/app/src/main/res/layout/game_list_item.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="130dp"
-        android:layout_height="100dp"
+        android:layout_width="100dp"
+        android:layout_height="130dp"
         android:id="@+id/gameImage"
         android:src="@drawable/controller"
         android:scaleType="centerCrop"/>
@@ -24,17 +24,8 @@
             android:id="@+id/gameTextView"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:text="Game Title"
+            android:text="Game Name"
             android:textColor="@color/colorPrimary"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="One Cuisine Type"
-            android:id="@+id/categoryTextView"
-            android:layout_below="@+id/restaurantNameTextView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:textStyle="italic"/>
     </LinearLayout>
 </LinearLayout>
