--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -31,11 +31,11 @@
                 android:layout_height="wrap_content"
                 android:text="Game Title"
                 android:id="@+id/gameTextView"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:textSize="20sp"
+                android:textSize="30sp"
                 android:textColor="@color/colorPrimaryDark"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:layout_alignParentTop="true"
+                android:layout_centerHorizontal="true" />
 
 
 
@@ -55,6 +55,28 @@
                 android:background="@color/colorAccent"
                 android:textColor="@color/colorTextIcons"
                 android:textSize="15sp" />
+
+            <!--<TextView-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:text="Coming Soon"-->
+                <!--android:id="@+id/textView3"-->
+                <!--android:layout_alignParentTop="true"-->
+                <!--android:layout_centerHorizontal="true"-->
+                <!--android:layout_marginTop="76dp"-->
+                <!--android:textSize="35dp" />-->
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Select Game"
+                android:id="@+id/gameSelectButton"
+                android:layout_centerVertical="true"
+                android:layout_centerHorizontal="true"
+                android:background="@color/colorAccent"
+                android:textColor="@color/colorTextIcons"
+                android:textSize="15sp" />
+
         </RelativeLayout>
     </LinearLayout>
 </FrameLayout>
