Added more UI changes and styling to the app as well as set up the groundwork for upcoming additions that will allow the app to be able to create groups and send reminders to other players.

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,4 +6,15 @@
         <!--android:title="Logout"-->
         <!--android:visible="true"-->
         <!--app:showAsAction="never" />-->
+    <item
+        android:id="@+id/action_friends"
+        android:title="Friends"
+        android:visible="true"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_games_scheduled"
+        android:icon="@drawable/ic_perm_identity_black_24dp"
+        android:title="Upcoming Games"
+        android:visible="true"
+        app:showAsAction="never" />
 </menu>
