--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/about"
+        android:text="@string/about_title"
         android:id="@+id/aboutTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
@@ -34,5 +34,5 @@
         android:layout_centerHorizontal="true"
         android:padding="20dp"
         android:textColor="#ffffff"
-        android:textSize="20dp" />
+        android:textSize="25sp" />
 </RelativeLayout>
