--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:text="@string/app_name"
         android:id="@+id/appTitleTextView"
         android:layout_marginTop="30dp"
-        android:textSize="65sp"
+        android:textSize="80sp"
         android:textStyle="bold"
         android:textColor="#ffffff"
         android:layout_alignParentTop="true"
@@ -41,7 +41,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/search"
-        android:background="@color/colorButton"
+        android:background="@drawable/button_border"
+        android:textSize="25sp"
         android:id="@+id/searchButton"
         android:layout_above="@+id/queuedButton"
         android:layout_centerHorizontal="true" />
@@ -51,10 +52,11 @@
         android:layout_height="wrap_content"
         android:text="@string/about"
         android:id="@+id/aboutButton"
+        android:textSize="25sp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="30dp"
-        android:background="@color/colorButton"
+        android:background="@drawable/button_border"
         />
 
     <Button
@@ -62,9 +64,9 @@
         android:layout_height="wrap_content"
         android:text="@string/queue"
         android:id="@+id/queuedButton"
+        android:textSize="25sp"
         android:layout_above="@+id/aboutButton"
         android:layout_alignLeft="@+id/aboutButton"
         android:layout_alignStart="@+id/aboutButton"
-        android:background="@color/colorButton"
-        />
+        android:background="@drawable/button_border"/>
 </RelativeLayout>
