--- a/app/src/main/res/layout/fragment_game_detail.xml
+++ b/app/src/main/res/layout/fragment_game_detail.xml
@@ -12,7 +12,7 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="210dp"
             android:id="@+id/gameImage"
             android:src="@drawable/controller"
             android:scaleType="centerCrop" />
@@ -20,7 +20,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
+            android:background="@android:color/holo_orange_dark"
             android:paddingTop="20dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
@@ -31,8 +31,8 @@
                 android:layout_height="wrap_content"
                 android:text="Game Title"
                 android:id="@+id/gameTextView"
-                android:textSize="30sp"
-                android:textColor="@color/colorPrimaryDark"
+                android:textSize="35sp"
+                android:textColor="@color/bright_foreground_material_light"
                 android:textStyle="bold"
                 android:layout_alignParentTop="true"
                 android:layout_centerHorizontal="true" />
@@ -52,9 +52,9 @@
                 android:text="Add to Queue"
                 android:id="@+id/gameQueueButton"
                 android:layout_alignParentBottom="true"
-                android:background="@color/colorAccent"
+                android:background="@drawable/button_border"
                 android:textColor="@color/colorTextIcons"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
 
             <!--<TextView-->
                 <!--android:layout_width="wrap_content"-->
@@ -73,9 +73,21 @@
                 android:id="@+id/gameSelectButton"
                 android:layout_centerVertical="true"
                 android:layout_centerHorizontal="true"
-                android:background="@color/colorAccent"
+                android:background="@drawable/button_border"
                 android:textColor="@color/colorTextIcons"
-                android:textSize="15sp" />
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/gameFragmentInfo"
+                android:id="@+id/gameFragmentInfo"
+                android:textColor="@color/colorTextIcons"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:textSize="28sp"
+                android:textStyle="bold" />
 
         </RelativeLayout>
     </LinearLayout>
