--- a/app/src/main/res/layout/game_list_item.xml
+++ b/app/src/main/res/layout/game_list_item.xml
@@ -5,8 +5,8 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="130dp"
+        android:layout_width="150dp"
+        android:layout_height="175dp"
         android:id="@+id/gameImage"
         android:src="@drawable/controller"
         android:scaleType="centerCrop"/>
@@ -14,7 +14,7 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:background="#f0f0f0"
+        android:background="#f3f3f3"
         android:layout_height="match_parent"
         android:padding="10dp">
 
@@ -22,10 +22,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/gameTextView"
-            android:textSize="20dp"
+            android:textSize="30dp"
             android:textStyle="bold"
             android:text="Game Name"
-            android:textColor="@color/colorPrimary"/>
+            android:textColor="#000000"/>
 
     </LinearLayout>
 </LinearLayout>
