--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -35,4 +35,15 @@
         android:padding="20dp"
         android:textColor="#ffffff"
         android:textSize="25sp" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/github"
+        android:id="@+id/github"
+        android:layout_below="@+id/infoTextView"
+        android:layout_alignLeft="@+id/aboutTextView"
+        android:layout_alignStart="@+id/aboutTextView"
+        android:textColor="#ffffff"
+        android:textSize="25sp"/>
 </RelativeLayout>
