--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="noBarTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        </style>
+
 </resources>
